# AlexTuner

./: build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/davide99/alextuner/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioAnalyzer.cpp  AudioAnalyzer.h  CMakeLists.txt  CircularBuffer.h  jni_bridge.cpp  native-lib.cpp
app/src/main/cpp/q_lib/: CMakeLists.txt
app/src/main/java/com/davide99/alextuner/: AboutActivity.java  AudioAnalyzer.java  AudioRecorder.java  Consts.java  Gauge.java  MainActivity.java  Notes.java  RoundedTextView.java  TunedNoteListener.java
app/src/main/java/com/davide99/alextuner/utils/: LifeCycleUtils.java  PermissionsManager.java  StyleUtils.java
app/src/main/res/drawable/: gradient_background.xml
app/src/main/res/layout/: activity_about.xml  activity_main.xml
app/src/main/res/layout-land/: activity_main.xml
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/davide99/alextuner/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
